# remarkable-obsidian-sync

./: .gitignore  README.md  main.py  pyproject.toml  vars.py
ros/: remarkable.py  utils.py
